# opu-sim

./: CMakeLists.txt  Dockerfile  README.md  README_Summary.md
compiler/: data-layout-gen
example/tinyyolo/: OPU_IR.json  download_dram_bin.sh
src/: accelerator.cc  accelerator.h  bit_util.h  config.h  driver.cc  driver_json.cc  driver_without_isa.cc  hw_spec.h  instruction.cc  instruction.h  profiler.cc  profiler.h  tests.cc  vmem.cc  vmem.h
